--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Tianxiang Sun (孙天祥)</title>
+  <title>Junliang He (何俊亮)</title>
 
-  <meta name="author" content="Tianxiang Sun">
+  <meta name="author" content="Junliang He">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
