--- a/papers.html
+++ b/papers.html
@@ -6,7 +6,7 @@
 
     <title>Papers</title>
 
-    <meta name="author" content="Tianxiang Sun">
+    <meta name="author" content="Junliang He">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
