--- a/index.html
+++ b/index.html
@@ -41,32 +41,23 @@
                         src="images/chinese_name.png" /></name>
                     <!-- <name>Tianxiang Sun <span style="color:black;font-size:22pt;font-family:STFangSong"><b>(孙天祥)</b></span><br/></name> -->
                   </p>
-                  <p>I am a 4th-year Ph.D. student at the <a href="https://nlp.fudan.edu.cn/">NLP Lab</a> at <a
-                      href="https://www.fudan.edu.cn/en/">Fudan University</a>, advised by Prof. <a
-                      href="https://xpqiu.github.io/">Xipeng Qiu</a> and Prof. <a
-                      href="https://nlp.fudan.edu.cn/28702/list.htm">Xuanjing Huang</a>. Previously, I was a
-                    research intern at <a href="https://www.amazonaws.cn/en/ailab/">Amazon Shanghai AI Lab</a> in 2020,
-                    supervised by <a href="https://shanghai.nyu.edu/academics/faculty/directory/zheng-zhang">Zheng
-                      Zhang</a>. Before that, I received my B.Eng. from <a href="https://en.xidian.edu.cn/">Xidian
-                      University</a> in 2019.
+                  <p>I am a 1st-year M.S. student at the <a href="https://nlp.fudan.edu.cn/">NLP Lab</a> at <a
+                      href="https://www.fudan.edu.cn/en/">Fudan University</a>. Before that, I received my B.Eng. from <a href="https://en.xidian.edu.cn/">Chongqing
+                      University</a> in 2022.
                   </p>
-                  <p>
-                    My research interests lie in the field of Machine Learning and Natural Language Processing,
-                    particularly in pre-trained language models and their optimization-, inference-, and data-efficient
-                    methods. Reach out to me over email: <a href="mailto:txsun19@fudan.edu.cn">txsun19@fudan.edu.cn</a>.
-                  </p>
+                  
                   <p style="text-align:center">
                     <a href="data/Tianxiang-CV.pdf">CV</a> &nbsp/&nbsp
                     <a href="https://scholar.google.com/citations?user=puHFkM0AAAAJ&hl=en">Google Scholar</a>
                     &nbsp/&nbsp
-                    <a href="https://github.com/txsun1997">Github</a> &nbsp/&nbsp
+                    <a href="https://github.com/jlhe2000">Github</a> &nbsp/&nbsp
                     <a href="https://twitter.com/TianxiangSun">Twitter</a> &nbsp/&nbsp
                     <a href="https://www.zhihu.com/people/SUN-Tianxiang">Zhihu</a>
                   </p>
                 </td>
                 <td style="padding:2.5%;width:40%;max-width:40%">
-                  <a href="images/txsun.jpeg"><img style="width:80%;max-width:80" alt="profile photo"
-                      src="images/txsun.jpeg" class="hoverZoomLink"></a>
+                  <a href="images/jlhe.jpeg"><img style="width:80%;max-width:80" alt="profile photo"
+                      src="images/jlhe.jpeg" class="hoverZoomLink"></a>
                 </td>
               </tr>
             </tbody>
@@ -78,55 +69,9 @@
                 <td style="padding:20px;width:100%;vertical-align:middle">
                   <heading>News</heading>
                   <ul>
-                    <li> <b>[Oct. 2022]</b> Three papers accepted to EMNLP 2022!</li>
-                    <li> <b>[Aug. 2022]</b> I gave a talk on LMaaS and black-box tuning at <a
-                        href="http://www.aitime.cn/">AI Time</a>.</li>
-                    <li> <b>[Aug. 2022]</b> I am co-organizing a <a
-                        href="https://iacc.pazhoulab-huangpu.com/">PLM-tuning competition</a> (total prize of 1 million
-                      RMB) with <a href="https://scholar.google.com/citations?hl=en&user=mou-vPwAAAAJ">Zhengfu He</a>.
-                      Welcome!</li>
-                    <li> <b>[July 2022]</b> I gave a talk on derivative-free optimization for pre-trained language
-                      models at <a href='https://mp.weixin.qq.com/s/CMUbjOJtNCOZnv9UmrAYHg'>MLNLP</a>. Slides <a
-                        href="https://txsun1997.github.io/slides/bbt_extension.pdf">here</a>.</li>
-                    <li> <b>[July 2022]</b> We have released a <a href='https://github.com/txsun1997/LMaaS-Papers'>paper
-                        list</a> on Language-Model-as-a-Service (LMaaS). Feel free to submit pull requests!</li>
-                    <li> <b>[May 2022]</b> One paper accepted to ICML 2022 (21.9% acceptance rate)! </li>
-                    <li> <b>[Apr. 2022]</b> Our paradigm shift survey is accepted to Machine Intelligence Research as an
-                      invited paper. </li>
-                    <li> <b>[Apr. 2022]</b> One paper accepted to NAACL 2022! </li>
-                    <li> <b>[Feb. 2022]</b> One paper accepted to ACL 2022 (Findings, 31.4% acceptance rate)! </li>
-                    <a onclick="return display('old_news');"> ---- show more ----</a>
-                    <div id="old_news" style="display: none;">
-                      <li> <b>[Oct. 2021]</b> I gave a talk on efficient NLP at <a
-                        href='https://www.bilibili.com/video/BV1NL4y1q7tT?vd_source=c04e95624eff313d107e25d2561c2484'>BAAI
-                        Big Model Meetup</a>. </li>
-                      <li> <b>[Oct. 2021]</b> I gave a talk on paradigm shift in NLP at <a
-                        href='https://www.bilibili.com/video/BV1tL4y167F2?vd_source=c04e95624eff313d107e25d2561c2484'>BAAI
-                        Qinyuan LIVE</a>. </li>
-                      <li> <b>[Sep. 2021]</b> We have released a <a
-                          href='https://github.com/txsun1997/awesome-early-exiting'>paper list</a> on early exiting.
-                        Feel free to submit pull requests!</li>
-                      <li> <b>[Sep. 2021]</b> I gave a talk on CoLAKE at <a
-                          href='https://bbs.sffai.com/d/276-colake'>SFFAI</a>. </li>
-                      <li> <b>[May 2021]</b> One paper accepted to ACL 2021 (21.2% acceptance rate)!</li>
-                      <li> <b>[Mar. 2021]</b> One paper accepted to NAACL 2021 (26% acceptance rate)!</li>
-                      <li> <b>[Dec. 2020]</b> I gave a talk on CoLAKE at <a
-                          href='https://www.bilibili.com/video/BV1E54y1x7om?p=2&vd_source=c04e95624eff313d107e25d2561c2484'>CSSNLP</a>.
-                      </li>
-                      <li> <b>[Sep. 2020]</b> One paper accepted to COLING 2020 (32.9% acceptance rate)! </li>
-                      <li> <b>[May 2020]</b> Our PTM survey is accepted to SCIENCE CHINA Technological Sciences as an
-                        invited paper. </li>
-                      <li> <b>[Nov. 2019]</b> I gave a talk on entity linking at <a
-                          href='https://www.amazonaws.cn/en/ailab/'>Amazon Shanghai AI Lab</a>. Slides can be downloaded
-                        <a href='https://txsun1997.github.io/slides/entity_linking.pdf'>here</a>.
-                      </li>
-                      <li> <b>[Nov. 2019]</b> My first paper is accepted to AAAI 2020 for oral presentation (4.5% oral
-                        presentation acceptance rate)!</li>
-                      <li> <b>[Oct. 2019]</b> I joined Amazon Shanghai AI Lab as a research intern, supervised by <a
-                          href="https://shanghai.nyu.edu/academics/faculty/directory/zheng-zhang">Zheng Zhang</a>.</li>
-                      <li> <b>[Sep. 2019]</b> I joined the NLP Lab at Fudan University as a Ph.D. student.</li>
-                      <li> <b>[Jun. 2019]</b> I received B.Eng. from School of Computer Science and Technology at Xidian
-                        University. GPA: 3.8/4.0 (top 0.5%)</li>
+                      <li> <b>[Sep. 2019]</b> I joined the NLP Lab at Fudan University as a M.S. student.</li>
+                      <li> <b>[Jun. 2019]</b> I received B.Eng. from College of Computer Science, Chongqing
+                        University. GPA: 3.93/4.0 (top 0.5%)</li>
                     </div>
                   </ul>
                 </td>
