--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
               <tr style="padding:0px">
                 <td style="padding:2.5%;width:63%;vertical-align:middle">
                   <p style="text-align:center">
-                    <name>Tianxiang Sun<img style="max-height:50px;vertical-align: middle;"
+                    <name>Junliang He<img style="max-height:50px;vertical-align: middle;"
                         src="images/chinese_name.png" /></name>
                     <!-- <name>Tianxiang Sun <span style="color:black;font-size:22pt;font-family:STFangSong"><b>(孙天祥)</b></span><br/></name> -->
                   </p>
                   <p>I am a 1st-year M.S. student at the <a href="https://nlp.fudan.edu.cn/">NLP Lab</a> at <a
-                      href="https://www.fudan.edu.cn/en/">Fudan University</a>. Before that, I received my B.Eng. from <a href="https://en.xidian.edu.cn/">Chongqing
+                      href="https://www.fudan.edu.cn/en/">Fudan University</a>. Before that, I received my B.Eng. from <a href="https://www.cqu.edu.cn">Chongqing
                       University</a> in 2022.
                   </p>
                   
@@ -69,9 +69,9 @@
                 <td style="padding:20px;width:100%;vertical-align:middle">
                   <heading>News</heading>
                   <ul>
-                      <li> <b>[Sep. 2019]</b> I joined the NLP Lab at Fudan University as a M.S. student.</li>
-                      <li> <b>[Jun. 2019]</b> I received B.Eng. from College of Computer Science, Chongqing
-                        University. GPA: 3.93/4.0 (top 0.5%)</li>
+                      <li> <b>[Sep. 2022]</b> I joined the NLP Lab at Fudan University as a M.S. student.</li>
+                      <li> <b>[Jun. 2022]</b> I received B.Eng. from College of Computer Science, Chongqing
+                        University. GPA: 3.93/4.0 (top 0.1%)</li>
                     </div>
                   </ul>
                 </td>
