--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         src="images/chinese_name.png" /></name>
                   </p>
                   <p>I am a 1st-year M.S. student at the <a href="https://nlp.fudan.edu.cn/">NLP Lab</a> at <a
-                      href="https://www.fudan.edu.cn/en/">Fudan University</a>. Before that, I received my B.Eng. from <a href="https://www.cqu.edu.cn">Chongqing
+                      href="https://www.fudan.edu.cn/en/">Fudan University</a>. Before that, I received my B.Eng. from <a href="http://english.cqu.edu.cn">Chongqing
                       University</a> in 2022.
                   </p>
                   
