--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <a href="https://scholar.google.com/citations?user=KhHpD54AAAAJ&hl=zh-CN">Google Scholar</a>
                     &nbsp/&nbsp
                     <a href="https://github.com/jlhe2000">Github</a> &nbsp/&nbsp
+                    <a href="https://twitter.com/jlhegogogo">Twitter</a> &nbsp/&nbsp
                     <a href="https://www.zhihu.com/people/faker-87-52">Zhihu</a>
                   </p>
                 </td>
