--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Junliang He</title>
+  <title>Junliang He (何俊亮)</title>
 
   <meta name="author" content="Junliang He">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -36,7 +36,11 @@
             <tbody>
               <tr style="padding:0px">
                 <td style="padding:2.5%;width:63%;vertical-align:middle">
-                  
+                  <p style="text-align:center">
+                    <name>Junliang He<img style="max-height:50px;vertical-align: middle;"
+                        src="images/chinese_name.png" /></name>
+                    <!-- <name>Tianxiang Sun <span style="color:black;font-size:22pt;font-family:STFangSong"><b>(孙天祥)</b></span><br/></name> -->
+                  </p>
                   <p>I am a 1st-year M.S. student at the <a href="https://nlp.fudan.edu.cn/">NLP Group</a> at <a
                       href="https://www.fudan.edu.cn/en/">Fudan University</a>. Before that, I received my B.Eng. from <a href="http://english.cqu.edu.cn">Chongqing
                       University</a> in 2022.
