--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
               <tr style="padding:0px">
                 <td style="padding:2.5%;width:63%;vertical-align:middle">
                   <p style="text-align:center">
-                    <name>Junliang He<img style="max-height:200px;vertical-align: middle;"
-                        src="images/chinese_name.png" /></name>
+                    <name>Junliang He</name>
                     <!-- <name>Tianxiang Sun <span style="color:black;font-size:22pt;font-family:STFangSong"><b>(孙天祥)</b></span><br/></name> -->
                   </p>
                   <p>I am a 1st-year M.S. student at the <a href="https://nlp.fudan.edu.cn/">NLP Group</a> at <a
