--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   Xiangyang Liu*, <strong>Tianxiang Sun</strong>*, Junliang He, Jiawen Wu, Lingling Wu, Xinyu Zhang, Hao
                   Jiang, Zhao Cao, Xuanjing Huang, Xipeng Qiu
                   <br>
-                  <em>NAACL</em>, 2022 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
+                  <em>NAACL</em>, 2022 &nbsp <font color="red"></font>
                   <br>
                   <a href="https://aclanthology.org/2022.naacl-main.240.pdf">pdf</a>
                   /
@@ -120,7 +120,6 @@
                   /
                   <a href="http://eluebenchmark.fastnlp.top/">benchmark</a>
                   /
-                  <a href="https://txsun1997.github.io/slides/ELUE.pdf">slides</a>
                   <p></p>
                   <p>
                     We propose a benchmark, ELUE (Efficient Language Understanding Evaluation), for efficient NLP models
