--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <papertitle>Towards Efficient NLP: A Standard Evaluation and A Strong Baseline</papertitle>
                   </a>
                   <br>
-                  Xiangyang Liu*, <strong>Tianxiang Sun</strong>*, Junliang He, Jiawen Wu, Lingling Wu, Xinyu Zhang, Hao
+                  Xiangyang Liu*, Tianxiang Sun*, <strong>Junliang He</strong>, Jiawen Wu, Lingling Wu, Xinyu Zhang, Hao
                   Jiang, Zhao Cao, Xuanjing Huang, Xipeng Qiu
                   <br>
                   <em>NAACL</em>, 2022 &nbsp <font color="red"></font>
