--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   </script>
                 </td>
                 <td style="padding:20px;width:70%;vertical-align:top">
-                  <a href="https://aclanthology.org/2022.naacl-main.240/">
+                  <a href="https://arxiv.org/pdf/2210.07626.pdf">
                     <papertitle>BERTScore is Unfair: On Social Bias in Language Model-Based Metrics for Text Generation
                     </papertitle>
                   </a>
