--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                     <li> <b>[Sep. 2022]</b> I joined the NLP Group at Fudan University as a M.S. student.</li>
                     <li> <b>[Jun. 2022]</b> I received B.Eng. from College of Computer Science, Chongqing
                       University. GPA: 3.93/4.0 (top 0.1%)</li>
-                    <li> <b>[Nov. 2021]</b> With the help of Qianchen, I built a benchmark website named ELUE. </li>
+                    <li> <b>[Nov. 2021]</b> With the help of Qianchen, I built a benchmark website named ELUE which is a
+                      part of one NAACL 2022 paper </li>
                     </div>
                   </ul>
                 </td>
@@ -169,7 +170,7 @@
                   </p>
                 </td>
               </tr>
-              
+
 
 
 
