--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <li> <b>[Jun. 2022]</b> I received B.Eng. from College of Computer Science, Chongqing
                       University. GPA: 3.93/4.0 (top 0.1%)</li>
                     <li> <b>[Nov. 2021]</b> With the help of Qianchen, I built a benchmark website named ELUE which is a
-                      part of one NAACL 2022 paper </li>
+                      part of one NAACL 2022 paper. </li>
                     </div>
                   </ul>
                 </td>
