--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <td style="padding:20px;width:100%;vertical-align:middle">
                   <heading>News</heading>
                   <ul>
-                    <li> <b>[Nov. 2022]</b> My first paper is accepted to EMNLP 2022!</li>
+                    <li> <b>[Nov. 2022]</b> Under the leadership of my senior Tianxiang Sun, my first paper is accepted to EMNLP 2022!</li>
                     <li> <b>[Sep. 2022]</b> I joined the NLP Group at Fudan University as a M.S. student.</li>
                     <li> <b>[Jun. 2022]</b> I received B.Eng. from College of Computer Science, Chongqing
                       University. GPA: 3.93/4.0 (top 0.1%)</li>
